/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)
===============================================================================

2007-12-28  Gilles Dumortier <dgil at ieee dot org>
	* Massive update the copyright date
	* r783 new problems with indices (%, hour) (SF bug 1778487)
	* merge Patch from Michel for IRISH et MADRID EXCHANGE

2007-12-27  Gilles Dumortier <dgil at ieee dot org>
	* Small,normal and big text don't work correctly (SF bug 1765421)
	* Restore color management on indice display
	* (Forum) Column UPP in main matrix (SF bug 1795386)
	* error with last version Matplotlib matplotlib-0.91.1 (SF bug 1847410)
	* Yahoo / Recent values : no historical prices (SF bug 1842520)
	* EURONEXT list of quotes not working anymore (SF bug 1829243)
	* Import error with LSE SETS , LSE SETSmm (SF bug 1847378)
	* NYSE list of quotes not working anymore (SF bug 1851229)

2007-12-18  Michel Legrand <m_leg at users dot sourceforge dot net>
	* Patch for IRISH et MADRID EXCHANGE (not included)
	* last IPOs december 2007
	* fix an issue for volume==0 in yahoo import connector

2007-11-03  Michel Legrand <m_leg at users dot sourceforge dot net>
	* More logo

2007-10-01  Michel Legrand <m_leg at users dot sourceforge dot net>
	* update manually Milan Stock Exchange
	  (http://www.borsaitaliana.it/bitApp/quotes.bit?target=SearchQuotes&grp=iniziale&param=A)

2007-09-30  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* Patch for changed StaticText into TextCtrl to allow background color
	  update (SF bug 1804076)

2007-09-24  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* Patch for Market indicator missing (SF Bug 1795105)

2007-09-21  Jean-Marie Pacquet <jmpacquet at users dot sourceforge dot net>
	* ./INSTALL : add installation from sources on linux-slackware

2007-09-14  Gilles Dumortier <dgil at ieee dot org>
	* new tarball