@@ -1,0 +1,4 @@
+BE0003806230;ZENITEL;ZENT;EURONEXT;EUR;BRU;BE
+NL0000303709;AEGON;AGN;EURONEXT;EUR;AMS;NL
+PTCFN0AE0003;COFINA,SGPS;CFN;EURONEXT;EUR;LIS;PT
+FR0004152593;A NOVO;NOV;EURONEXT;EUR;PAR;FR
